Add border to viewbox in SVG

--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ Vectory relies on the following software to be installed:
 * https://inkscape.org[Inkscape]
 * https://www.ghostscript.com/[Ghostscript]
 
-NOTE: Inkscape 1.3.1 does not work properly with EPS/PS on Windows. To avoid
+NOTE: Inkscape 1.3.1+ does not work properly with EPS/PS on Windows. To avoid
 this issue, the 1.3.0 version of Inkscape can be used.
 
 
